# data_collection

./: .gitignore  .gitmodules  CHANGELOG_CAMERA.md  CMakeLists.txt  README.md  README_CAMERA.md  build.sh  camera_params.yml  formula.md  plot _pixel.py  plot_trajectory.py
config/: example_config.yaml  kinect_config.yaml  zed_config.yaml
include/: basketball_detector.hpp  common.hpp  hik_camera_adapter.hpp  solver.hpp  zed_camera.hpp
records/: pixels_20250626_231133.csv  pixels_20250626_231521.csv  pixels_20250626_231732.csv  pixels_20250626_231913.csv  pixels_20250626_232207.csv  pixels_20250626_232302.csv  pixels_20250626_232346.csv  pixels_20250626_232431.csv  pixels_20250626_232540.csv  pixels_20250626_232604.csv  pixels_20250626_232629.csv  pixels_20250626_232717.csv  pixels_20250626_232741.csv  pixels_20250626_232827.csv  pixels_20250626_232854.csv  pixels_20250626_233012.csv  pixels_20250626_233117.csv  pixels_20250626_233136.csv  pixels_20250626_233154.csv  pixels_20250626_233330.csv  pixels_20250626_233347.csv  pixels_20250626_233404.csv  pixels_20250626_233420.csv  pixels_20250626_233557.csv  pixels_20250626_233644.csv  pixels_20250626_233709.csv  pixels_20250626_233729.csv  pixels_20250626_233743.csv  record_20250625_225501.csv  record_20250625_225525.csv  record_20250625_225554.csv  record_20250625_225707.csv  record_20250625_225808.csv  record_20250625_225824.csv  record_20250625_230530.csv  record_20250625_230604.csv  record_20250625_234631.csv  record_20250625_235613.csv  record_20250626_180051.csv  record_20250626_232302.csv  (+2 more)
scripts/: demo_camera_selection.sh  extract_frames.py
src/: basketball_detect.cpp  basketball_detector.cpp  basketball_tool.cpp  camera_factory.cpp  hik_camera.cpp  hik_camera_adapter.cpp  kinect_camera_adapter.cpp  main.cpp  solver.cpp  solver_camera.cpp  test_camera.cpp  utils.cpp  zed_camera.cpp
zed_demo/: CMakeLists.txt  README.md  build.sh
zed_demo/examples/: color_capture.cpp
zed_demo/include/: zed_color_driver.h
zed_demo/src/: zed_color_driver.cpp
